[gd_scene load_steps=4 format=2]

[ext_resource path="res://boid.gd" type="Script" id=1]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 1, -0.4, -0.4, 0.4, -0.4 )

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[node name="boid" type="KinematicBody2D" groups=[
"boid",
]]
modulate = Color( 0.5, 0.5, 0.1, 1 )
scale = Vector2( 6, 6 )
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 1, -0.4, -0.4, 0.4, -0.4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="detect_radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_radius"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="body_entered" from="detect_radius" to="." method="_on_detect_radius_body_entered"]
[connection signal="body_exited" from="detect_radius" to="." method="_on_detect_radius_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
